--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
@@ -139,7 +139,7 @@
       <li>
         <blockquote>
           <div class="team-photo">
-          <img src="img/ivan.jpg" alt="Maria">
+          <img src="img/ivan.jpg" alt="Ivan">
           <p>Profissionais competentes e atenciosos. Recomendo!</p>
           <footer>— Ivan</footer>
         </blockquote>
@@ -227,7 +227,7 @@
     <div class="mapa">
       <h4>Nossa localização</h4>
       <div class="team-photo">
-          <img src="img/mapa.jpg" alt="Maria">
+          <img src="img/mapa.jpg" alt="mapa">
   
 </div>
 </footer>
